--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "retweeter.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node retweeter.js"
   },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@bitbucket.org/librasean/phantomwire.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["twitter,nodejs"],
+  "author": "librasean",
   "license": "ISC",
   "homepage": "https://bitbucket.org/librasean/phantomwire#readme",
   "dependencies": {
